hide feature slides on mobile plus some more fixes...

--- a/sites/all/themes/nerdsummit/scss/style.scss
+++ b/sites/all/themes/nerdsummit/scss/style.scss
@@ -394,6 +394,10 @@ input, .form-item {
   }
 }
 
+#main #block-system-user-menu {
+  position: static;
+}
+
 #banner_area {
   width: 100%;
   float: none;
