--- a/sites/all/themes/nerdsummit/scss/style.wide.scss
+++ b/sites/all/themes/nerdsummit/scss/style.wide.scss
@@ -154,10 +154,10 @@ input, .form-item {
   #block-views-featured-sessions-block {
     display: block !important;
   }
-#banner_area div#block-nerd-homepage-login-registration-block, #block-system-user-menu {
+#banner_area div#block-nerd-homepage-login-registration-block, #banner_area #block-system-user-menu {
   max-width: 245px;
   float: right;
-  position: absolute;
+  position: absolute !important;
   background-color: $blockBgDarkOrange;
   .form-text.required {
     width: 234px;
